test/error/DynamicObjectLeakArgument.ci
public class Test
{
	static void Foo(Test t)
	{
	}

	public static bool Run()
	{
		// FIXME:
		Foo(new Test()); //ERROR: Dynamically allocated object must be assigned to a  reference
		return true;
	}
}
